# primectl

./: .gitignore  CMakeLists.txt  Makefile  README.md  defs.c  functions.c  functions.h  libgl.c  libgl.h  main.c  utils.c  utils.h
cmake/: FindCairo.cmake  FindDBus.cmake  FindDBusCpp.cmake  FindGIO.cmake  FindGlib.cmake
common/: dbus_interface.xml
libGL/: Makefile  defs.c  libGL.c  libGL.h  utils.c
src/: CMakeLists.txt
src/common/: config.h  dbus-introspect.xml
src/libGL/: CMakeLists.txt  dbus.c  dbus.h  defs.c  libGL.c  libGL.h
src/primectl/: primectl.py
src/primed/: CMakeLists.txt  client_matcher.cpp  client_matcher.hpp  client_pool.cpp  client_pool.hpp  dbus_server.cpp  dbus_server.hpp  gpu_switch.cpp  gpu_switch.hpp  main.cpp  process_tracker.cpp  process_tracker.hpp  settings.cpp  settings.hpp  utils.cpp  utils.hpp  xserverctl.cpp  xserverctl.hpp
src/xproxy/: X.sh
tests/: CMakeLists.txt
tests/libGL/: CMakeLists.txt  check_export.cmake  check_export.sh  check_output.cmake  test_common.c  test_common.h  test_dlopen.c  test_linked.c
tests/primed/: CMakeLists.txt  utils_test.cpp
tests/tools/: CMakeLists.txt  test1.in.h  test1.out.def  test2.in.h  test2.out.def
tools/: gen.py  gendefs.py  gendefs.sh  wrap.sh
